foundation pics files

--- a/y/about_us/about.html
+++ b/y/about_us/about.html
@@ -142,7 +142,7 @@
                                     <div class="card card-profile card-plain">
                                       <div class="card-avatar">
                                         <a href="#">
-                                          <img class="img" src="../members/maharnab.jpeg">
+                                          <img class="img" src="../members/maharnab1.jpeg">
                                         </a>
                                       </div>
                                       <div class="card-body" >
