--- a/y/alumni.html
+++ b/y/alumni.html
@@ -425,7 +425,7 @@ section .section-title {
                       <div class="frontside">
                           <div class="card">
                               <div class="card-body text-center">
-                                  <p><img class=" img-fluid" src="alumni/Monjit.jpg" alt="card image"></p>
+                                  <p><img class=" img-fluid" src="alumni/Monjit.JPG" alt="card image"></p>
                                   <h4 class="card-title">Monojit Goswami</h4>
                                   <p class="card-text"> working in BMS system (Battery management system)
                                     And CAN communication (intra vehicle community)</p>
