--- a/y/foundation.html
+++ b/y/foundation.html
@@ -98,7 +98,7 @@
         </p>
       </div>
       <div class="container text-center m-2">
-        <img src="image/IMG_1106.jpg" width="500px",height="250px">
+        <img src="img/hacking.jpeg" width="500px",height="250px">
       </div>
         <div class="container">
           <p>
@@ -124,7 +124,7 @@
           </p>
         </div>
         <div class="container text-center m-2">
-          <img src="image/IMG_1050.jpg" width="500px",height="250px">
+          <img src="img/Robospeians.jpeg" width="500px",height="250px">
         </div>
         <div class="container">
           <p>
