--- a/y/index.html
+++ b/y/index.html
@@ -868,7 +868,7 @@ font-weight: 300;
     <div class="col-12 col-sm-6 col-md-4 ">
       <div class="our-team hello">
         <div class="picture">
-          <img class="img-fluid" src="members/Ashutosh1.jpg">
+          <img class="img-fluid" src="members/ashutosh1.jpg">
         </div>
         <div class="team-content">
           <span class="badge badge-dark">Exeutive Member</span>
@@ -918,7 +918,7 @@ font-weight: 300;
         <div class="col-12 col-sm-6 col-md-4 justify-content-center">
       <div class="our-team hello">
         <div class="picture">
-          <img class="img-fluid" src="members/maharnab.jpg">
+          <img class="img-fluid" src="members/maharnab1.jpeg">
         </div>
         <div class="team-content">
           <span class="badge badge-dark">Exeutive Member</span>
