--- a/y/compact-gallery.html
+++ b/y/compact-gallery.html
@@ -144,8 +144,8 @@ font-size: medium;
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                    <a class="lightbox" href="img/HACKINGWRKSHP02.jpg">
-                        <img class="img-fluid image" src="img/HACKINGWRKSHP02.jpg">
+                    <a class="lightbox" href="img/HACKINGWRKSHP02.JPG">
+                        <img class="img-fluid image" src="img/HACKINGWRKSHP02.JPG">
                         <span class="description">
                             <span class="description-heading">Hacking Workshop</span>
                             <span class="description-body">hacking Workshop organised by Jec ROBOWORLD , 2011</span>
