galley photo changed

--- a/y/tutorial.html
+++ b/y/tutorial.html
@@ -301,7 +301,7 @@ padding: 1%;
     <iframe width="420" height="345" src="https://www.youtube.com/embed/RHD7jIt7ErU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="col-md-5 axe">
-<h3 class="font-weight-bold text-center">Channel Owner : Jinmoy Jit Talukder</h3>
+<h3 class="font-weight-bold text-center">Channel Owner : Jinmoy Jit Talukdar</h3>
 <h5 class="text-center">Mechanical Branch</h5>
 <h5 class="text-center">Channel Name : ROADSIDE ENGINEER</h5>
 <a href="https://www.youtube.com/channel/UCedsch2TZ-VqASA-QxyQlCg" target="_blank"><h6 class="text-center">Go to the Channel</h6></a>
