--- a/y/compact-gallery.html
+++ b/y/compact-gallery.html
@@ -144,11 +144,11 @@ font-size: medium;
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                    <a class="lightbox" href="img/HACKINGWRKSHP02.JPG">
-                        <img class="img-fluid image" src="img/HACKINGWRKSHP02.JPG">
+                    <a class="lightbox" href="img/Robosepians.jpeg">
+                        <img class="img-fluid image" src="img/Robosepians.jpeg">
                         <span class="description">
-                            <span class="description-heading">Hacking Workshop</span>
-                            <span class="description-body">hacking Workshop organised by Jec ROBOWORLD , 2011</span>
+                            <span class="description-heading">VISION ROBOTRICKS WORKSHOP  by ROBOSAPIENS INDIA</span>
+                            <span class="description-body">VISION ROBOTRICKS WORKSHOP  by ROBOSAPIENS INDIA organised by Jec ROBOWORLD , 2011</span>
                         </span>
                         </a>
                     </div>
