executive spelling fixed,arnab da,s phone no and mail #

--- a/y/ab.html
+++ b/y/ab.html
@@ -871,7 +871,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/Ashutosh1.jpg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Ashutosh Das</h3>
           <h4 class="title">Mechanical</h4>
         </div>
@@ -887,7 +887,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/balarka.jpg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Balarka Goswami</h3>
           <h4 class="title">Computer Science</h4>
         </div>
@@ -905,7 +905,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/jinmoy.jpeg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Jinmoy Jit Talukdar</h3>
           <h4 class="title">Mechanical</h4>
         </div>
@@ -921,7 +921,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/maharnab.jpg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Maharnab Nath</h3>
           <h4 class="title">Electrical</h4>
         </div>
@@ -937,7 +937,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/kinku das.png">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Kinku Das</h3>
           <h4 class="title">Mechanical</h4>
         </div>
