--- a/y/alumni.html
+++ b/y/alumni.html
@@ -667,12 +667,12 @@ section .section-title {
                           <p class="card-text">Branch : Electrical Engineering ( 2014 - 2018)</p>
                           <ul class="list-inline">
                               <li class="list-inline-item">
-                                  <a class="social-icon text-xs-center" target="_blank" href="mailto:arnab.kishor.bordoloi@gmail.com">
+                                  <a class="social-icon text-xs-center" target="_blank" href="#">
                                       <i class="fa fa-envelope"></i>
                                   </a>
                               </li>
                               <li class="list-inline-item">
-                                  <a class="social-icon text-xs-center" target="_blank" href="tel:8638758781">
+                                  <a class="social-icon text-xs-center" target="_blank" href="#">
                                       <i class="fa fa-phone"></i>
                                   </a>
                               </li>
