--- a/y/index.html
+++ b/y/index.html
@@ -34,6 +34,14 @@
         }
 
       </script> -->
+      <script defer src="/__/firebase/7.21.0/firebase-app.js"></script>
+      <!-- include only the Firebase features as you need -->
+      <script defer src="/__/firebase/7.21.0/firebase-auth.js"></script>
+      <script defer src="/__/firebase/7.21.0/firebase-database.js"></script>
+      <script defer src="/__/firebase/7.21.0/firebase-messaging.js"></script>
+      <script defer src="/__/firebase/7.21.0/firebase-storage.js"></script>
+      <!-- initialize the SDK after all desired features are loaded -->
+      <script defer src="/__/firebase/init.js"></script>
     <style>
    
 
@@ -868,10 +876,10 @@ font-weight: 300;
     <div class="col-12 col-sm-6 col-md-4 ">
       <div class="our-team hello">
         <div class="picture">
-          <img class="img-fluid" src="members/ashutosh1.jpg">
+          <img class="img-fluid" src="members/Ashutosh1.jpg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Ashutosh Das</h3>
           <h4 class="title">Mechanical</h4>
         </div>
@@ -887,7 +895,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/balarka.jpg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Balarka Goswami</h3>
           <h4 class="title">Computer Science</h4>
         </div>
@@ -905,7 +913,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/jinmoy.jpeg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Jinmoy Jit Talukdar</h3>
           <h4 class="title">Mechanical</h4>
         </div>
@@ -918,10 +926,10 @@ font-weight: 300;
         <div class="col-12 col-sm-6 col-md-4 justify-content-center">
       <div class="our-team hello">
         <div class="picture">
-          <img class="img-fluid" src="members/maharnab1.jpeg">
+          <img class="img-fluid" src="members/maharnab.jpg">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Maharnab Nath</h3>
           <h4 class="title">Electrical</h4>
         </div>
@@ -937,7 +945,7 @@ font-weight: 300;
           <img class="img-fluid" src="members/kinku das.png">
         </div>
         <div class="team-content">
-          <span class="badge badge-dark">Exeutive Member</span>
+          <span class="badge badge-dark">Executive Member</span>
           <h3 class="name">Kinku Das</h3>
           <h4 class="title">Mechanical</h4>
         </div>
