--- a/public/index.html
+++ b/public/index.html
@@ -860,7 +860,9 @@ gtag('config', 'UA-26153324-1');
 <div id="section3" class="container-fluid" class="anchor">
   <div class="achievements">
     <h1>Achievements</h1>
-    <p> <a href="file:///C:/Users/acer/Downloads/list_achievements.pdf" download></a></p>
+    <a download href="file:///C:/Users/acer/Downloads/list_achievements.pdf" download> 
+      <button href="list_achievements.pdf"class="btn" style="background-color:black;color:blue;width:150px;height:40px;"><i class="fa fa-download"></i> Download</button>
+    </a>
   </div>
   <div class="our_events" id="event" class="anchor">
     <span class="border_line"></span>
